--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -16,5 +16,7 @@ html(lang='en')
       script(src='/js/bundle.js')
       if ENV_DEVELOPMENT
         script(src='http://localhost:35729/livereload.js')
+  
   body
+    block title
     block content
