--- a/public/css/partials/_block.scss
+++ b/public/css/partials/_block.scss
@@ -1,12 +1,12 @@
 
 .btn-main {
-	background: $blue;
+	background: $main;
 	padding: 0 2.5rem;
 	height: 40px;
 	border: 0px;
 	&:hover {
-		darken:($blue, 15%);
-    background: linear-gradient(to bottom,#0074e4,#1b5098);
+		darken:($main, 15%);
+    background: linear-gradient(to bottom,$main,$mainLight);
 	}
 }
 .row {
@@ -50,10 +50,10 @@
   		width: 100%;
   		color: white;
   	&:hover {
-			background-color: $lightBlueTrans;
+			background-color: $accentLightTrans;
   	}
   	&.active {
-  		background-color: $blueTrans;
+  		background-color: $accentLightTrans;
   		text-decoration: none;
   	}
   }
@@ -95,7 +95,7 @@
 		height: 43px;
 		border-radius: 5px;
 		border: none;
-		background: $blue;
+		background: $main;
 	}
 }
 	
@@ -126,9 +126,8 @@
 	border: none;
 }
 
-
 .banner {
-	background-color: rgba(24,52,93,.85);
+	background-color: $mainTrans;
 	padding: .6667rem, 2rem;
 	position: absolute;
 	min-height: 60px;
@@ -233,9 +232,9 @@
 		font-size: 13px;
 		margin-bottom: 0;
 	} a {
-		color: $blue;
+		color: $main;
 		&:hover {
-			color: $bluer;
+			color: $mainHover;
 		}
 	}
 }
@@ -279,7 +278,7 @@
 	position: absolute;
 	bottom: 0px;
 	text-align: center;
-	background-color: $blue;
+	background-color: $main;
 }
 .img-wrapper {
 	position: relative;
@@ -294,7 +293,7 @@
   width: 100%;
   height: 55px;
   color: #000;
-	background: rgba(116,192,5,.75);
+	background: $mainTrans;
 }
 .img-after h3 {
 	margin: 0 auto;
@@ -314,7 +313,7 @@
 
 
 .reviews { 
-	background: $blueish; 
+	background: $mainLight; 
 	padding: 20px;
 	max-width: 125px;
 } 
@@ -327,7 +326,7 @@
 }
 
 .footer { 
-	background: $blueish; 
+	background: $mainLight; 
 	padding: 20px;
 	max-width: 125px;
   background: $darkGrey;
@@ -344,7 +343,7 @@
   li a {
 	  color: #999;
   } li:hover a {
-  	color: $blueBright;
+  	color: $mainHover;
   }
 }
 .footer-bottom {
@@ -440,7 +439,7 @@
 		margin-left: .5rem;
 	}
 	span {
-		color: #0074e4;
+		color: $main;
 		font-family: $serifBold;
 		font-size: 1.6em;
 		line-height: 1.6;
@@ -493,7 +492,7 @@
 		color: $darkGrey;
 	}
 	a:hover {
-		color: $bluer;
+		color: $mainHover;
 		text-decoration: none;
 	}
 }
@@ -534,13 +533,13 @@ span.btn-inner-wrapper {
 	position: absolute;
 	height: 44px;
 	border-radius: 5px;
-	background: $blue;
+	background: $main;
 	padding: 0 2.5rem;
 	// right: 100px;
 }
 
 .form-below {
-	// background: $blue;
+	// background: $main;
 	// padding: 100px;
 } li {
 	list-style-type: none;
@@ -683,7 +682,7 @@ span.btn-inner-wrapper {
     outline:none;
     border: none;
     color: white;
-    background: $blue;
+    background: $main;
     font-family: $sansBold;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -726,7 +725,7 @@ span.btn-inner-wrapper {
 			margin-top: 0.8em;
 			color: #fff;
 		&:hover {
-			color: $blue;
+			color: $main;
 		}
 	}
 }
@@ -1067,7 +1066,7 @@ a {
 
 .mobile-menu:before {
 	content: "\2630";
-	color: $blue;
+	color: $main;
 	font-size: 3.3rem;
 }
 .mobile-menu {
@@ -1093,7 +1092,7 @@ a {
 	text-align: center;
 	border-left: 1px solid #ddd;
 	&:first-child {
-		border-top: 4px solid $blue;
+		border-top: 4px solid $main;
 	}
 }
 .nav-mobile-li {
@@ -1101,7 +1100,7 @@ a {
 	border-bottom: 1px solid #ddd;
 	color: #242628;
 	&:hover {
-		color: $blue;
+		color: $main;
 	}
 }
 
