fixing up routing, todo- app yo:opts

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,290 +1,11 @@
-include layout
+include ./includes/layout
 
 body
-	include navAlt
 	block content
-		.hero-banner-wrapper
-			#hero.hero.ct(style='background: url(images/main01.jpg); background-size: cover; background-position: center center;')
-				.hero-cta
-					.hero-cta-h1
-						h1#hero-header #{home.sales.header}
-					.hero-cta-ul
-						ul#hero-ul
-							a#hero01.active(href='#')
-								li  Pools 
-							a#hero02(href='#')
-								li  Spas 
-							a#hero03(href='#')
-								li  Firepits 
-							a#hero04(href='#')
-								li  Patio 
-					.hero-cta-btn
-						form
-							input(placeholder='Enter your email address...')
-						.hero-cta-btn-submit
-							button.btn-main(type='submit')  Submit 
-			
-			#banner.banner
-				.banner-wrapper
-					a(href='#open-modal')
-						img(src='images/icon02.png')
-					p.flex-1
-						span#banner-a.bold.hidden-on-mobile
-							| Download the Checklist  →
-						span#banner-b.bold
-							| 10 Tips for a Perfect Pool
-					a(href='#open-modal', style='color:white')
-						button.btn.btn-main Download
-
-
-			#heroDiv
-			#bannerDiv
-		#featuredDiv
-		#resourcesDiv
-		// ==========================================
-		// ======= TEST::REVIEWS & HEADSHOTS ========
-		// ==========================================
-		.reviews-headshots-wrapper
-			// =========================
-			// ========== START: REVIEWS
-			#reviews.reviews
-				.review.ct(style='background: url(images/reviewbg01.jpg); background-size: cover; background-position: center center;')
-					.quote
-						p
-							| “Sun Ray Pools took great care of us.”
-						h6 Robert Smith, Rowlett
-						a
-							i.fa.fa-picture-o
-			// ===================
-			// ===== START: QUOTES
-			.quotes-wrapper(style='margin-top: -50px')
-				.quotes
-					ul.quo-ul
-						li#quote01.quo-li.active
-							.quote
-								span
-									a
-										img(src='images/headshot01.jpg')
-						li#quote02.quo-li
-							.quote
-								span
-									a
-										img(src='images/headshot02.jpg')
-						li#quote03.quo-li
-							.quote
-								span
-									a
-										img(src='images/headshot03.jpg')
-						li#quote04.quo-li
-							.quote
-								span
-									a
-										img(src='images/headshot04.jpg')
-						li#quote05.quo-li
-							.quote
-								span
-									a
-										img(src='images/headshot05.jpg')
-		// reviews-headshots-wrapper
-		// =====================================
-		// ========== START: RESOURCES =========
-		// =====================================
-		#resources2.resources
-			h2  Additional Info 
-			.resources-wrapper
-				// =============================
-				// MD/LG SCREENS ONLY (<768px)
-				// =============================
-				ul.sm-hide-ul
-					li.sm-hide
-						section.xs-hide.sm-hide
-							.col-sm-4.col-sm-offset-0.col-xs-10.col-xs-offset-1
-								.resource
-									.img-wrapper
-										img.resource(src='images/resource04.jpg')
-										.img-after
-											h3.ct
-												| About Us
-									.img-after
-									.caption
-										p
-											| Eros meis vidit ad usu, viris vivendo an sit, etiam oporteat quo te. Cu ius bonorum molestiae. Id mea wisi necessitatibus, at duo purto omnis. Hinc vivendo te vix.
-										p  Sonet ridens concludaturque vix ne. 
-										a(href='#open-modal')  Contact Us 
-					li.xs-hide
-						section.xs-hide.sm-hide
-							.col-sm-4.col-sm-offset-0.col-xs-10.col-xs-offset-1
-								.resource
-									.img-wrapper
-										img.resource(src='images/resource05.jpg')
-										.img-after
-											h3.ct
-												| Financing
-									.img-after
-									.caption
-										p
-											| Aeterno maiestatis pri an, idque ullum antiopam vel eu. Mucius accusata iracundia ea qui, ei est graecis adipiscing, eam eu. Diceret probatus eu ius, id vel nostro omnesque moderatius.
-										p  Congue percipit has te. 
-										a(href='#open-modal')  Learn More 
-					li.xs-hide
-						section.xs-hide.sm-hide
-							.col-sm-4.col-sm-offset-0.col-xs-10.col-xs-offset-1
-								.resource
-									.img-wrapper
-										img.resource(src='images/resource06.jpg')
-										.img-after
-											h3.ct
-												| FAQs
-									.img-after
-									.caption
-										p
-											| Lorem ipsum dolor sit amet, an mei velit minim denique. Ut quot mediocrem hendrerit duo, nibh tamquam docendi pro an.
-										p  That's Sun Ray Pools. 
-										a(href='#open-modal')  Get an Estimate 
-				// =============================
-				// SM&XS SCREENS ONLY (<768px)
-				// =============================
-				ul.md-hide-ul
-					li.md-hide.li-sm
-						section.sm-only
-							.resource-wrapper-sm
-								.resource-sm
-									.img-wrapper-sm
-										img.resource(src='images/resource04.jpg')
-									.img-banner-sm
-										.banner-h3-sm
-											h3.ct
-												| About Us
-									.caption-sm
-										.caption-p-sm
-											p
-												| Eros meis vidit ad usu, viris vivendo an sit, etiam oporteat quo te. Cu ius bonorum molestiae.
-										.caption-a-sm
-											a(href='#open-modal')  Contact Us 
-					.clearfix
-					li.md-hide.li-sm
-						section.sm-only
-							.resource-wrapper-sm
-								.resource-sm
-									.img-wrapper-sm
-										img.resource(src='images/resource05.jpg')
-									.img-banner-sm
-										.banner-h3-sm
-											h3.ct
-												| Financing
-									.caption-sm
-										.caption-p-sm
-											p  Aeterno maiestatis pri an, idque ullum antiopam vel eu. Mucius accusata. 
-										.caption-a-sm
-											a(href='#open-modal') Learn More 
-					.clearfix
-					li.md-hide.li-sm
-						section.sm-only
-							.resource-wrapper-sm
-								.resource-sm
-									.img-wrapper-sm
-										img.resource(src='images/resource06.jpg')
-									.img-banner-sm
-										.banner-h3-sm
-											h3.ct
-												| FAQs
-									.caption-sm
-										.caption-p-sm
-											p  Lorem ipsum dolor sit amet, an mei velit minim denique. 
-										.caption-a-sm
-											a(href='#open-modal')  Get an Estimate 
-					.clearfix
-			// .resources-wrapper
-		// #resources
-		.clearfix
-		// ==========
-		// START: CTA
-		// ==========
-		//
-			<div class="cta row" id="cta">
-			<form>
-			<input placeholder="Your Name">
-			<input placeholder="Email Address">
-			<input placeholder="Phone Number">
-			</form>
-			</div>
-		#testId
-			.partners
-				ul
-					li.partner.partner01
-						img(src='images/partner01.jpg')
-					li.partner.partner02
-						img(src='images/partner02.jpg')
-					li.partner.partner03
-						img(src='images/partner03.jpg')
-					li.partner.partner04
-						img(src='images/partner04.jpg')
-		// =============
-		// START: FOOTER
-		// =============
-		#footer.footer.row
-			.footer-top
-				ul.footer-ul
-					li.footer-li
-						a(href='#')  Home 
-					li.footer-li
-						a.smoothScroll(href='#featured-categories')  Pools 
-					li.footer-li
-						a.smoothScroll(href='#reviews')  Testimonials 
-					li.footer-li
-						a.smoothScroll(href='#featured-categories')  Projects 
-					li.footer-li
-						a.smoothScroll(href='#resources2')  Resources 
-					li.footer-li
-						a.smoothScroll(href='#resources')  About Us 
-					li.footer-li
-						a(href='#open-modal')  Get a Quote 
-			hr(style='border-color: #666')
-			.footer-bottom
-				.copyright
-					p  © Sun Ray Pools 2016 
-				.social
-					p  Follow us 
-					i.fa.fa-facebook-square
-					i.fa.fa-houzz
-					i.fa.fa-twitter-square
-					i.fa.fa-google-plus-square
-		// #footer
-		#modal.modal(style='display: none')
-			// create partial form.html
-			form
-				input(placeholder='Your Name')
-				input(placeholder='Email Address')
-				input(placeholder='Phone Number')
-		// ====================================
-		// =========== START: MODAL ===========
-		// ====================================
-		// vvv====vvv
-		// OPEN-MODAL
-		// ===vvvv===
-		#open-modal.modal-dialog
-			.modal-content
-				header.modal-header.ct
-					a.modal-close(data-dismiss='modal', aria-hidden='true', href='#')
-						span.hidden Close
-					br
-					br
-					h4.modal-title.ct  Get ready for summer!
-					p
-						| Enter your information below to get 
-						em 10 Tips to a Perfect Pool
-				.modal-body.ct
-					form#subForm(action='http://followclosely2.createsend.com/t/d/s/kumn/', method='post')
-						input#fieldName(name='cm-name', type='text', placeholder='Your Name', required='')
-						input#fieldEmail(name='cm-kumn-kumn', type='email', placeholder='Email Address', required='')
-						input#fielddliduh(name='cm-f-dliduh', type='text', placeholder='Zip Code', required='')
-						button.button-add.button-blue.wide(type='submit') Download Now 
-						p No spam. Unsubscribe any time.
-		// .main
-		//- script.
-			// template : App.hbs === navigation bar;
-			// document.querySelector('#navDiv').innerHTML = MyApp.templates.App();
-			//- document.querySelector('#heroDiv').innerHTML = MyApp.templates.Hero();
-			//- document.querySelector('#bannerDiv').innerHTML = MyApp.templates.Banner();
-			//- document.querySelector('#featuredDiv').innerHTML = MyApp.templates.Featured();
-			//- document.querySelector('#resourcesDiv').innerHTML = MyApp.templates.Resources();
+		include ./includes/navAlt
+		include ./includes/hero
+		include ./includes/features
+		include ./includes/quotes
+		include ./includes/info
+		include ./includes/partners
+		include ./includes/foot
