--- a/app/views/landing.jade
+++ b/app/views/landing.jade
@@ -1,7 +1,12 @@
-include layout
+include ./includes/layout
 
 body
-	include nav
 	block content
-		h1= title
-		p= text
+		include ./includes/nav
+		include ./includes/cta
+
+
+
+
+
+				
