--- a/app/views/error.jade
+++ b/app/views/error.jade
@@ -1,5 +1,6 @@
-extends layout
+//- extends ./includes/layout
 
-h1= message
-h2= error.status
-pre #{error.stack}
+body
+  h1= message
+  h2= error.status
+  pre #{error.stack}
