--- a/public/css/partials/_block.scss
+++ b/public/css/partials/_block.scss
@@ -353,12 +353,14 @@
 .copyright {
 	margin-right: 5rem;
 	p {
-		margin-top: .5rem;
+		margin-top:1.05rem;
 	}
 }
 .social {
 	display: flex;
 	p {
+		display:flex;
+		align-items:center;
 		margin-right: 40px;
 		margin-top: .5rem;
 	}
@@ -492,7 +494,7 @@
 		color: $darkGrey;
 	}
 	a:hover {
-		color: $mainHover;
+		color: $accentBright;
 		text-decoration: none;
 	}
 }
@@ -776,9 +778,6 @@ li.active  {
 	}
 }
 
-
-
-
 #featured-categories, #featured-posts {
   margin-right: auto;
   margin-left: auto;
@@ -800,7 +799,7 @@ li.active  {
   padding-left: 15px;
   padding-right: 15px;
   background-size: cover;
-  background-color: #1b5098;
+  background-color: $main;
   background-position: center;
   position: relative;
   text-align: center;
@@ -817,41 +816,30 @@ li.active  {
   left: 0;
   right: 0;
   content: '';
-  background-color: rgba(27,80,152,0.8);
+  background-color: $mainTrans;
   transition: background-color,1s;
 }
 
 @media (min-width: 768px) {
-#featured-categories .featured-category {
-    float: left;
-    width: 16.66666667%;
+	#featured-categories .featured-category {
+		float: left;
+		width: 16.66666667%;
 	}
 }
 
 #featured-categories .featured-category a, #featured-categories .featured-category h2, #featured-categories .featured-category span, #featured-categories .featured-category div {
-    color: #fff;
-    transition: color,1s;
+	color: #fff;
+	transition: color,1s;
 }
 #featured-categories .featured-category a {
-    display: block;
-    padding: 20px 10px;
-    width: 100%;
-    height: 100%;
+	display: block;
+	padding: 20px 10px;
+	width: 100%;
+	height: 100%;
 }
 #featured-categories .featured-category * {
-    position: relative;
-    z-index: 2;
-}
-a {
-    color: #0074e4;
-    text-decoration: none;
-}
-a {
-    background: transparent;
-}
-
-#featured-categories .featured-category a:before {
-
+	position: relative;
+	z-index: 2;
 }
 
 #featured-categories .featured-category {
@@ -880,7 +868,7 @@ a {
 
 #featured-categories .featured-category:hover a,
 #featured-categories .featured-category:hover h2 {
-    color: #1b5098;
+    color: $main;
 }
 @media (max-width: 1199px) {
 #featured-categories .featured-category {
@@ -918,7 +906,7 @@ a {
   padding-left: 15px;
   padding-right: 15px;
   background-size: cover;
-  background-color: #0074e4;
+  background-color: $main;
   background-position: center;
   position: relative;
   text-align: center;
@@ -934,7 +922,7 @@ a {
   left: 0;
   right: 0;
   content: '';
-  background-color: rgba(0,116,228,0.8);
+  background-color: $mainTrans;
   transition: background-color,1s;
 }
 
@@ -983,7 +971,7 @@ a {
 }
 .featured-post:hover a, .featured-post:hover h2,
 .featured-post:hover span, .featured-post:hover div {
-    color: #0074e4;
+    color: $main;
 }
 
 
@@ -1042,7 +1030,7 @@ a {
 
 .partners {
 	border-top: 1px solid $lightGrey;
-	background-color: #F9F9FA;
+	background-color: $offWhite;
 	padding: 15px 0;
 	ul {
 	display: flex;
