--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -2,7 +2,7 @@ include ./includes/layout
 
 body
 	block content
-		include ./includes/navAlt
+		include ./includes/nav-alt
 		include ./includes/hero
 		include ./includes/features
 		include ./includes/quotes
