--- a/app/views/includes/features.jade
+++ b/app/views/includes/features.jade
@@ -1,14 +1,14 @@
 #featuredDiv
 	section#featured-categories
-		each val, index in features.rowone
-			.featured-category(style='background-image: url(images/#{val})')
-				a.fa.fa-star-o.fancybox(href='images/#{val}', rel='group')
-					h2 #{index}
+		each val in features.rowone
+			.featured-category(style='background-image: url(images/#{val[1]}')
+				a(class="fa fa-#{val[2]} fancybox" href='images/#{val[1]}', rel='group')
+					h2 #{val[0]}
 	section#featured-posts
-		each val, index in features.rowtwo
-			.featured-post(style='background-image: url(images/#{val}')
-				a.fancybox(href='images/#{val}', rel='group')
-					h2.meta-type.story-type #{index} 
+		each val in features.rowtwo
+			.featured-post(style='background-image: url(images/#{val[1]}')
+				a(href='images/#{val[1]}', class="fa fa-#{val[2]} fancybox" rel='group')
+					h2.meta-type.story-type #{val[0]} 
 					.post-meta
 						span Click for More Info 
 	.clearfix
