--- a/public/css/partials/_landing.scss
+++ b/public/css/partials/_landing.scss
@@ -25,12 +25,12 @@
 
 
 .btn-accent {
-	background: $accentBright;
+	background: $accent;
   color: #fff;
   border: 0px;
   &:hover {
   	background-color: $accentTrans;
-    background: linear-gradient(to bottom, $accentBright,$accent);
+    background: linear-gradient(to bottom, $accentBright, $accent);
     background-repeat: repeat-x;
     color: #fff;
   }
@@ -41,6 +41,7 @@
 	margin: 0 auto;
 	padding-left:20px;
 	padding-right:20px;
+	
 }
 .mainImg{
 	height: 570px;
@@ -60,7 +61,7 @@
 	margin-top:135px;
 	margin-bottom:0;
 	margin-right:1em;
-	background-color: rgba(27,80,152,.9);
+	background-color: $mainTransDark;
 	height: 65px;
 	max-width: 100%;
 	&:before, &:after{
@@ -73,10 +74,10 @@
     position: absolute;
     top: 0;
 	}	&:before{
-		border-right-color: rgba(27,80,152,.9);
+		border-right-color: $mainTransDark;
     border-right-color: rgba(51,51,51,.9);
 	}	&:after{
-    border-left-color: rgba(27,80,152,.9);
+    border-left-color: $mainTransDark;
 		border-top-style: solid;
     border-left-width: 1em;
     border-left-style: solid;
@@ -93,11 +94,10 @@ div.trapezoid-wrapper {
 	margin-bottom:200px;
 }
 .landing-overlay {
-	// position:absolute;
   height: 250px;
 	padding: 20px;
   text-align: left;
-  background-color: rgba(0,116,228,.9);
+  background-color: $mainTrans;
 	width:100%;
 	max-width:1200px;
 	@media all and (max-width: 640px) {
@@ -192,18 +192,18 @@ li.sub-nav-item {
 }
 
 div.landing-details{
-	color: $darkGrey;
+	color: $main;
   font-size: 15px;
 	font-family: $sansBold;
   line-height: 1.5;
   text-transform: none;
-  background-color: #e2effc;
+  background-color: $neutral;
   padding: 7px 20px 10px;
   text-align: center;
   a {
   	margin-left:100px;
   } a:hover {
-  	color: $blueDark;
+  	color: $accent;
   }
   @media all and (max-width: 640px) {
   	display: none !important;
